--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"pot": "composer run-script pot",
 		"clean": "rimraf build deploy vendor",
 		"vendor": "composer install --no-dev --no-scripts -o",
-		"predeploy": "pnpm run clean && pnpm run vendor && pnpm run build",
+		"predeploy": "pnpm run clean && pnpm run vendor",
 		"deploy": "packtor"
 	}
 }
