--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"bugs": {
 		"url": "https://github.com/ernilambar/adminscript/issues"
 	},
+	"browserslist": "> 1%, not dead",
 	"packtor": {
 		"files": [
 			"**/*",
@@ -25,23 +26,37 @@
 			"!*.lock",
 			"!*.md",
 			"!*.yaml",
+			"!languages/**/*",
 			"!src/**/*"
 		]
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.24.8",
 		"@wordpress/prettier-config": "^4.3.0",
+		"babel-loader": "^9.1.3",
+		"css-loader": "^7.1.2",
+		"css-minimizer-webpack-plugin": "^7.0.0",
 		"easy-replace-in-files": "^1.0.3",
+		"mini-css-extract-plugin": "^2.9.0",
 		"packtor": "^1.0.2",
+		"postcss": "^8.4.39",
+		"postcss-loader": "^8.1.1",
+		"postcss-nested": "^6.0.1",
+		"postcss-preset-env": "^9.6.0",
 		"prettier": "npm:wp-prettier@^3.0.3",
-		"rimraf": "^6.0.0"
+		"rimraf": "^6.0.0",
+		"webpack": "^5.93.0",
+		"webpack-cli": "^5.1.4"
 	},
 	"scripts": {
-		"format": "prettier \"**/*.{cjs,css,js,json}\" --write",
+		"dev": "webpack --watch",
+		"build": "webpack --mode=production --no-devtool",
+		"format": "prettier \"**/*.{cjs,css,js,json,mjs}\" --write",
 		"version": "easy-replace-in-files",
 		"pot": "composer run-script pot",
-		"clean": "rimraf deploy vendor",
+		"clean": "rimraf build deploy vendor",
 		"vendor": "composer install --no-dev --no-scripts -o",
-		"predeploy": "pnpm run clean && pnpm run vendor",
+		"predeploy": "pnpm run clean && pnpm run vendor && pnpm run build",
 		"deploy": "packtor"
 	}
 }
