--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"description": "Adminscript",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"php": ">=8.0"
+		"php": ">=7.2.24",
+		"yahnis-elsts/plugin-update-checker": "^5.4"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
